--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   <script src="script.js"></script>
 </head>
 <body>
-  ...
-  <!-- Le reste du contenu -->
-  ...
+    <div class="container">
+        <select id="dropdown">
+          <option value="option1">Option 1</option>
+          <option value="option2">Option 2</option>
+          <option value="option3">Option 3</option>
+        </select>
+        <input type="text" id="textInput" placeholder="Entrez votre texte ici">
+      </div>
+      <script src="script.js"></script>
 </body>
