Modification des serveurs

--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
 <body>
     <div class="container">
         <select id="dropdown">
-          <option value="option1">Option 1</option>
-          <option value="option2">Option 2</option>
-          <option value="option3">Option 3</option>
+          <option value="EUW">EUW</option>
+          <option value="EUNE">EUNE</option>
+          <option value="RU">RU</option>
+          <option value="TR">TR</option>
+          <option value="NA">NA</option>
+          <option value="LAN">LAN</option>
+          <option value="LES">LES</option>
+          <option value="BR">BR</option>
+          <option value="JP">JP</option>
+          <option value="OCE">OCE</option>
+          <option value="KR">KR</option>
         </select>
         <input type="text" id="textInput" placeholder="Entrez votre texte ici">
       </div>
