--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <option value="option2">Option 2</option>
           <option value="option3">Option 3</option>
         </select>
-        <input type="text" id="textInput" placeholder="Entrez votre texte ici">
+        <input type="text" id="textInput" placeholder="Game Username">
       </div>
       <script src="script.js"></script>
 </body>
