--- a/index.html
+++ b/index.html
@@ -3,25 +3,30 @@
 <head>
   <meta charset="utf-8">
   <title>BoostTrack</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <script src="script.js"></script>
+  <script src="js/script.js"></script>
 </head>
 <body>
-    <div class="container">
-        <select id="dropdown">
-          <option value="EUW">EUW</option>
-          <option value="EUNE">EUNE</option>
-          <option value="RU">RU</option>
-          <option value="TR">TR</option>
-          <option value="NA">NA</option>
-          <option value="LAN">LAN</option>
-          <option value="LES">LES</option>
-          <option value="BR">BR</option>
-          <option value="JP">JP</option>
-          <option value="OCE">OCE</option>
-          <option value="KR">KR</option>
-        </select>
-        <input type="text" id="textInput" placeholder="Game Username">
+  <div class="container d-flex justify-content-center align-items-center flex-align">
+    <div id="dropdown-container" class="d-flex flex-align align-items-center">
+      <button class="btn btn-primary fixed-width" id="dropdownBtn">Europe West</button>
+      <div id="dropdownOptions" class="mt-2 position-absolute" style="display: none; width: 100%;">
+        <button class="btn btn-secondary fixed-width selected" data-value="EUW">Europe West</button>
+        <button class="btn btn-secondary" data-value="NA">North America</button>
+        <button class="btn btn-secondary" data-value="EUNE">Europe North Est</button>
+        <button class="btn btn-secondary" data-value="OCE">Oceania</button>
+        <button class="btn btn-secondary" data-value="RU">Russia</button>
+        <button class="btn btn-secondary" data-value="KR">Korea</button>
+        <button class="btn btn-secondary" data-value="BR">Brazil</button>
+        <button class="btn btn-secondary" data-value="JP">Japan</button>
+        <button class="btn btn-secondary" data-value="TR">Turky</button>
+        <button class="btn btn-secondary" data-value="LAN">Latin America North</button>
+        <button class="btn btn-secondary" data-value="LAS">Latin America South</button>
       </div>
+    </div>
+    <input type="text" id="textInput" placeholder="Game Username">
+  </div>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
       <script src="script.js"></script>
 </body>
