--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <script src="js/script.js"></script>
 </head>
 <body>
+  <div class="navbar">
+    <ul>
+        <li><a href="#">Accueil</a></li>
+        <li><a href="#">À Propos</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+</div>
   <div class="container d-flex justify-content-center align-items-center flex-align">
     <div class="label">
       <div class="labeltextbtn">Region</div>
