--- a/index.html
+++ b/index.html
@@ -34,5 +34,5 @@
     </div>
   </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-      <script src="script.js"></script>
+      <script src="js/script.js"></script>
 </body>
