--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <script src="js/script.js"></script>
 </head>
 <body>
-  <div class="navbar">
+  <div class="navbarn">
+    <a href="#"><img src="images/logo/logo.png" alt="Logo" class="navbar-logo"></a>
     <ul>
         <li><a href="#">Accueil</a></li>
         <li><a href="#">Services</a></li>
