--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>BoostTrack</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <script src="js/script.js"></script>
 </head>
 <body>
   <div class="navbarn">
@@ -16,25 +15,28 @@
         <li><a href="#">À Propos</a></li>
         <li><a href="#">Contact</a></li>
     </ul>
-</div>
+  </div>
+  <div class="debugdiv">
+    <h1 class="debugtext" id="textdebug">Lorem Ipsum esrteseststttttttttttttttttttttttttt</h1>
+  </div>
   <div class="container d-flex justify-content-center align-items-center flex-align">
     <div class="label">
       <div class="labeltextbtn">Region</div>
       <div id="dropdown-container" class="d-flex flex-align align-items-center">
         <button class="btn btn-primary fixed-width" id="dropdownBtn">Europe West</button>
-       <div id="dropdownOptions" class="mt-2 position-absolute" style="display: none; width: 100%;">
-         <button class="btn btn-secondary fixed-width selected" data-value="EUW">Europe West</button>
-         <button class="btn btn-secondary" data-value="NA">North America</button>
-         <button class="btn btn-secondary" data-value="EUNE">Europe North Est</button>
-         <button class="btn btn-secondary" data-value="OCE">Oceania</button>
-         <button class="btn btn-secondary" data-value="RU">Russia</button>
-         <button class="btn btn-secondary" data-value="KR">Korea</button>
+        <div id="dropdownOptions" class="mt-2 position-absolute" style="display: none; width: 100%;">
+          <button class="btn btn-secondary fixed-width selected" data-value="EUW">Europe West</button>
+          <button class="btn btn-secondary" data-value="NA">North America</button>
+          <button class="btn btn-secondary" data-value="EUNE">Europe North Est</button>
+          <button class="btn btn-secondary" data-value="OCE">Oceania</button>
+          <button class="btn btn-secondary" data-value="RU">Russia</button>
+          <button class="btn btn-secondary" data-value="KR">Korea</button>
           <button class="btn btn-secondary" data-value="BR">Brazil</button>
           <button class="btn btn-secondary" data-value="JP">Japan</button>
-         <button class="btn btn-secondary" data-value="TR">Turky</button>
+          <button class="btn btn-secondary" data-value="TR">Turky</button>
           <button class="btn btn-secondary" data-value="LAN">Latin America North</button>
           <button class="btn btn-secondary" data-value="LAS">Latin America South</button>
-       </div>
+        </div>
       </div>
     </div>
     <div class="label">
@@ -42,5 +44,6 @@
       <input type="text" id="textInput" placeholder="Game Username">
     </div>
   </div>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
