--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="label">
       <div class="labeltextbtn">Region</div>
       <div id="dropdown-container" class="d-flex flex-align align-items-center">
-        <button class="btn btn-primary fixed-width" id="dropdownBtn">Europe West</button>
+        <button class="btn btn-primary fixed-width" id="regionTag">Europe West</button>
         <div id="dropdownOptions" class="mt-2 position-absolute" style="display: none; width: 100%;">
           <button class="btn btn-secondary fixed-width selected" data-value="EUW">Europe West</button>
           <button class="btn btn-secondary" data-value="NA">North America</button>
