--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     </ul>
   </div>
   <div class="debugdiv">
-    <h1 class="debugtext" id="textdebug">Lorem Ipsum esrteseststttttttttttttttttttttttttt</h1>
+    <h1 class="debugtext" id="textdebug">Debug Entry</h1>
   </div>
   <div class="container d-flex justify-content-center align-items-center flex-align">
     <div class="label">
       <div class="labeltextbtn">Region</div>
       <div id="dropdown-container" class="d-flex flex-align align-items-center">
-        <button class="btn btn-primary fixed-width" id="dropdownBtn">Europe West</button>
+        <button class="btn btn-primary fixed-width" id="dropdownBtn" data-value="EUW">Europe West</button>
         <div id="dropdownOptions" class="mt-2 position-absolute" style="display: none; width: 100%;">
           <button class="btn btn-secondary fixed-width selected" data-value="EUW">Europe West</button>
           <button class="btn btn-secondary" data-value="NA">North America</button>
