--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
     <div class="label">
       <div class="labeltextbtn">Region</div>
       <div id="dropdown-container" class="d-flex flex-align align-items-center">
-        <button class="btn btn-primary fixed-width" id="dropdownBtn" data-value="EUW">Europe West</button>
+        <button class="btn btn-primary fixed-width" id="dropdownBtn" data-value="europe">Europe West</button>
         <div id="dropdownOptions" class="mt-2 position-absolute" style="display: none; width: 100%;">
-          <button class="btn btn-secondary fixed-width selected" data-value="EUW">Europe West</button>
-          <button class="btn btn-secondary" data-value="NA">North America</button>
-          <button class="btn btn-secondary" data-value="EUNE">Europe North Est</button>
-          <button class="btn btn-secondary" data-value="OCE">Oceania</button>
-          <button class="btn btn-secondary" data-value="RU">Russia</button>
-          <button class="btn btn-secondary" data-value="KR">Korea</button>
-          <button class="btn btn-secondary" data-value="BR">Brazil</button>
-          <button class="btn btn-secondary" data-value="JP">Japan</button>
-          <button class="btn btn-secondary" data-value="TR">Turky</button>
-          <button class="btn btn-secondary" data-value="LAN">Latin America North</button>
-          <button class="btn btn-secondary" data-value="LAS">Latin America South</button>
+          <button class="btn btn-secondary fixed-width selected" data-value="europe">Europe West</button>
+          <button class="btn btn-secondary" data-value="americas">North America</button>
+          <button class="btn btn-secondary" data-value="europe">Europe North Est</button>
+          <button class="btn btn-secondary" data-value="asia">Oceania</button>
+          <button class="btn btn-secondary" data-value="europe">Russia</button>
+          <button class="btn btn-secondary" data-value="asia">Korea</button>
+          <button class="btn btn-secondary" data-value="americas">Brazil</button>
+          <button class="btn btn-secondary" data-value="asia">Japan</button>
+          <button class="btn btn-secondary" data-value="asia">Turky</button>
+          <button class="btn btn-secondary" data-value="americas">Latin America North</button>
+          <button class="btn btn-secondary" data-value="americas">Latin America South</button>
         </div>
       </div>
     </div>
